# resto360

./: .env.example  .gitignore  CLAUDE.md  Makefile  SOLUTION_ARCHITECTURE.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
.planning/: ARCHITECTURE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-pos-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-inventory/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-payments/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-03-USER-SETUP.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-RESEARCH.md  04-UAT.md  04-VERIFICATION.md
apps/api/: .dockerignore  conftest.py  manage.py  pytest.ini
apps/api/config/: asgi.py  (+2 more)
apps/web/: next.config.ts  package-lock.json  package.json  playwright.config.ts
docker/: .env.docker  Dockerfile.api  docker-compose.yml
docs/plans/: 2026-02-04-resto360-lite-design.md  2026-02-04-resto360-lite-integration.md
scripts/: dev-setup.ps1  dev-setup.sh
(+456 files in other folders)
